[gd_scene load_steps=3 format=3 uid="uid://bxf3qxopaugmm"]

[ext_resource type="Script" path="res://Test.gd" id="1_ygtk5"]
[ext_resource type="PackedScene" uid="uid://c8p1pj7dpqlu" path="res://yt_live_chat.tscn" id="2_tum5v"]

[node name="Teste" type="Node2D"]
script = ExtResource("1_ygtk5")

[node name="YTLiveChat" parent="." instance=ExtResource("2_tum5v")]
begins_with = ""

[node name="startButton" type="Button" parent="."]
offset_left = 265.0
offset_right = 311.0
offset_bottom = 31.0
text = "Start"

[node name="stopButton" type="Button" parent="."]
offset_left = 215.0
offset_top = -1.0
offset_right = 258.0
offset_bottom = 30.0
text = "Stop"

[node name="liveIdEdit" type="TextEdit" parent="."]
offset_right = 213.0
offset_bottom = 30.0
text = "live id"

[node name="messagesText" type="TextEdit" parent="."]
offset_top = 34.0
offset_right = 311.0
offset_bottom = 720.0
placeholder_text = "messages"
editable = false
wrap_mode = 1
autowrap_mode = 2

[connection signal="yt_live_message_read" from="YTLiveChat" to="." method="_on_yt_live_chat_yt_live_message_read"]
[connection signal="pressed" from="startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="stopButton" to="." method="_on_stop_button_pressed"]
